# jixiebiquyuRepo

./: .gitignore  README.md
Demo/: CMakeLists.txt
Demo/head/: calc.h
Demo/src/: calc.cpp  demo.cpp
fenge/: CMakeLists.txt  classified_points.txt  classified_points10.txt  classified_points20.txt  classified_points30.txt
fenge/src/: K-means.cpp  K-means2.cpp  K-means_centroids.cpp  K-means_deth.cpp  K-means_rgb.cpp
include/: AntColonyOptimization.h  zuobiaoduqu.h
lujingguihua/: CMakeLists.txt  Tourlenth.txt  Tourlenth1,2,0.5,300.txt  Tourlenth1,3,0.5,300.txt  Tourlenth1,3,0.5,500.txt  Tourlenth10,1.txt  Tourlenth20.txt  Tourlenth30,1.txt
lujingguihua/src/: AntColonyOptimization.cpp  diedai.cpp  lujing.cpp  lujing_diedai.cpp  lujing_huatu.cpp  lujingdiedai.cpp
lujinguihua/: CMakeLists.txt  antcolony.cpp  lujing.cpp
lujinguihua/src/: antcolony.cpp
tuxiang/: CMakeLists.txt  map.cpp  map1.cpp
tuxiang/src/: Map.cpp
zhongxindian/: CMakeLists.txt  centroids.txt
zhongxindian/src/: zhonxindian.cpp
